[package]
name = "terminal-chat"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.41", features = ["full"] }
tokio-tungstenite = "0.24"

# Terminal UI
ratatui = { version = "0.29", features = ["crossterm"] }
crossterm = "0.28"
tachyonfx = "0.16"

# Video processing
ffmpeg-next = "7.1"
nokhwa = { version = "0.10", features = ["input-native"] }

# Networking
ngrok = { version = "0.14", features = ["axum"] }
axum = { version = "0.7", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
url = "2.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
crossbeam-channel = "0.5"
base64 = "0.22"
uuid = { version = "1.11", features = ["v4", "serde"] }
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = "0.4"

[profile.release]
opt-level = 3
lto = true
